--- a/index.html
+++ b/index.html
@@ -44,8 +44,7 @@
   </table>
 
   <script>
-    const scriptUrl = "const scriptUrl = "https://script.google.com/macros/s/AKfycbzSO93q4AjATJMZw1RPJM2UXPlbgfA8xW14-3RP8x9WTDBJpjb_jo65a_9CxMxpsDzf/exec";
-";
+    const scriptUrl = "const scriptUrl = https://script.google.com/macros/s/AKfycbzSO93q4AjATJMZw1RPJM2UXPlbgfA8xW14-3RP8x9WTDBJpjb_jo65a_9CxMxpsDzf/exec";
 
     document.getElementById("add-form").addEventListener("submit", function(e) {
       e.preventDefault();
